# ibkr-gateway

./: .gitignore  PROJECT_PLAN.md  README.md  dev_watch.py  download_js.py  ibkr_client.py  ibkr_inspect_data.py  ibkr_stream.py  index-comp.ipynb  main.py  market_chart.py  market_chart_tv.py  notebook_usage_example.py  pyproject.toml  run_dashboard.py  test_available_data.py  test_binance.py  test_contracts.py  test_debug.py  test_delayed_data.py  test_historical.py  test_ibkr_connection.py  test_market_hours.py  test_realtime_prices.py  test_single.py  test_subscription.py  tv_chart_2y_1d.html  tv_chart_7d_1m.html
src/: __init__.py  analysis.py  dashboard.py  data_sources.py  live_server.py
tests/: test_connections.py  test_sanitization.py
